<resources  translatable="false">
    <string name="choose_player" translatable="false">选择播放器</string>
    <string name="loginout_success">注销成功！</string>
    <string name="hello">Hello World, MainActivity!</string>
    <string name="dialog_title_normal">爱语吧提示</string>
    <string name="error_net_unavailable">网络错误，无法和服务器取得联系\n按\"退出\"直接退出酣逗畅游，稍后请重试</string>
    <string name="error_net_wifi_other">网络错误，无法和服务器取得联系\n按\"重设网络\"尝试选择其他Wifi接入点，稍后请重试\n按\"退出\"直接退出酣逗畅游，稍后请重试</string>
    <string name="error_net_wifi">网络错误，无法和服务器取得联系\n按\"重设网络\"尝试使用Wifi接入点，稍后请重试\n按\"退出\"直接退出酣逗畅游，稍后请重试</string>
    <string name="error_net_wifi_off">网络错误，无法和服务器取得联系\n按\"重设网络\"选择其他Wifi接入点，稍后请重试\n按\"关闭Wifi\"关闭Wifi尝试使用3G/GPRS\n按\"退出\"直接退出酣逗畅游，稍后请重试</string>
    <string name="dialog_button_exit">退出软件</string>
    <string name="dialog_button_resetNet">重设网络</string>
    <string name="dialog_button_offWifi">关闭Wifi</string>
    <string name="app_language">zh</string>
    <string name="copyright">CopyRight © 北京爱语吧科技有限公司。北京语言大学出版社</string>
    <string name="version">版本号：3.8    VOA慢速英语</string>
    <string name="play_check_network">请检查网络是否可用！</string>
    <string name="more_info">加载中...</string>
    <string name="alert_btn_ok">确定</string>
    <string name="no_new_news">没有新的篇目</string>
    <string name="single">单曲循环</string>
    <string name="order">顺序播放</string>
    <string name="out_of_order">乱序播放</string>
    <string name="positive">是</string>
    <string name="negative">否</string>
    <string name="first">已经是第一页了</string>
    <string name="last">已经是最后一页了</string>
    <string name="update">正在下载安装更新包，请等候…</string>
    <string name="update_fail">暂时没有更新</string>
    <string name="update_title">软件更新</string>
    <string name="update_alert_1">当前有新版本更新,</string>
    <string name="update_alert_2">您是否要更新？</string>
    <string name="collect">点击收藏</string>
    <string name="collected">已收藏，点击取消收藏</string>
    <string name="english_intro">点击变成中文或无字幕</string>
    <string name="chinese_intro">点击变成无字幕或英文</string>
    <string name="shuang_intro">双鱼</string>
    <string name="none_intro">点击变成英文或中文字幕</string>
    <string name="backward">点击快退</string>
    <string name="forward">点击快进</string>
    <string name="pause">当前为播放状态，点击暂停</string>
    <string name="play">当前为暂停状态，点击继续播放</string>
    <string name="stop">点击停止播放并返回九宫格界面</string>
    <string name="introduction_this_version">本版更新简介</string>
    <string name="setting_title">设置</string>
    <string name="exit">退  出</string>
    <string name="refresh">刷新</string>
    <string name="nextpage">下一页</string>
    <string name="lastpage">上一页</string>
    <string name="setting">设置</string>
    <string name="setting1">设    置</string>
    <string name="applanguage">界面语言</string>
    <string name="setting_chinese">中文</string>
    <string name="setting_english">英文</string>
    <string name="repeat_way">循环播放方式</string>
    <string name="repeat">循环播放</string>
    <string name="set_local_when_paly">播放时自动收藏</string>
    <string name="set_local_when_paly_expl">(在播放时，自动收藏当前播放的篇目)</string>
    <string name="newword_title">生词本</string>
    <string name="clean_local">一键删除本地</string>
    <string name="clean_local_expl">(清除您收藏过的记录，减少占用您的空间)</string>
    <string name="back">返  回</string>
    <string name="alert">提示</string>
    <string name="unable_to_load">网络异常，无法加载</string>
    <string name="readcount">共点播 </string>
    <string name="readcount1"> 次</string>
    <string name="exitAlert">您确定要退出么？</string>
    <string name="no_collection">您目前还没有收藏记录</string>
    <string name="REQID_DEFAULT">0</string>
    <string name="pull_to_refresh_pull_label">下拉刷新...</string>
    <string name="pull_to_refresh_release_label">松开刷新...</string>
    <string name="pull_to_refresh_refreshing_label">加载中...</string>
    <string name="pull_to_refresh_tap_label">点击刷新...</string>
    <string name="pull_to_refresh_on_refreshing">正在刷新...</string>
    <string name="pull_to_refresh_lastest">最新更新:</string>
    <string name="alert_title">提示</string>
    <string name="alert_exit_content">正在下载中，确定退出应用？</string>
    <string name="alert_buy_content">确定要购买么</string>
    <string name="alert_recharge_content">您的爱语币余额不足支付，是否充值？</string>
    <string name="alert_net_content">网络未连接</string>
    <string name="alert_btn_net">连接</string>
    <string name="alert_btn_recharge">充值</string>
    <string name="alert_btn_exit">退出</string>
    <string name="alert_btn_buy">购买</string>
    <string name="alert_btn_cancel">取消</string>
    <string name="alert_press">再按一次退出程序</string>
    <string name="about_title">关于</string>
    <string name="about_update_alert_1">当前有新版本更新：</string>
    <string name="about_update_alert_2">,是否要更新？</string>
    <string name="about_update_running_title">更新应用</string>
    <string name="about_update_running">正在更新，请稍后。。。</string>
    <string name="about_error">服务器忙！请稍后下载！</string>
    <string name="about_update_isnew">已经是最新版本</string>
    <string name="about_version">软 件 版 本 :</string>
    <string name="about_more">更 多 精 彩 应 用</string>
    <string name="play_title_img">图片</string>
    <string name="play_title_article">原文</string>
    <string name="play_screen_lit_text">屏幕保持常亮，如关闭请到设置界面操作！</string>
    <string name="play_click_word_text">点击英文单词查询释义！</string>
    <string name="play_collection_success">下载中</string>
    <string name="play_collectioned">已收藏</string>
    <string name="play_no_login">当前未登录！请登录！</string>
    <string name="play_please_take_the_word">请取英文单词</string>
    <string name="play_no_word_interpretation">当前单词未找到释义！</string>
    <string name="play_ins_new_word_success">成功加入生词本！</string>
    <string name="word_add">添加</string>
    <string name="word_close">关闭</string>
    <string name="category_title">分类</string>
    <string name="category_search_info_1">搜索“</string>
    <string name="category_search_info_2">”的结果</string>
    <string name="category_no_search_result">没有搜索到结果！</string>
    <string name="category_check_network">请检查网络是否可用！</string>
    <string name="collection_title">新闻</string>
    <string name="collection_title_sentence">句子</string>
    <string name="collection_sentence_button">收藏本句</string>
    <string name="collection_collected">本句已经收藏过了</string>
    <string name="collection_upload">上传至云端</string>
    <string name="collection_download">从云端同步</string>
    <string name="collection_upload_msg">上传至云端会让云端与现在本地的句子保持一致，确认上传吗？</string>
    <string name="collection_download_msg">从云端同步会尽可能多的保留您在本地和云端的句子，确认同步吗？</string>
    <string name="collection_success">收藏句子成功！</string>
    <string name="collection_del">删除</string>
    <string name="collection_no_login">您还未登录！请登录！</string>
    <string name="collection_please_select_art">请选择要删除的文章</string>
    <string name="feedback_title">意见反馈</string>
    <string name="feedback_info">您反馈的问题和建议，将是我们进步的动力！</string>
    <string name="feedback_contact">联系方式（有效的邮箱地址）</string>
    <string name="feedback_info_title">反馈或建议</string>
    <string name="feedback_contact_title">联系方式</string>
    <string name="feedback_submit_success">意见反馈已提交！</string>
    <string name="feedback_info_null">反馈信息不能为空！</string>
    <string name="feedback_email_null">请填写email！</string>
    <string name="feedback_effective_email">请填写有效的email！</string>
    <string name="feedback_network_error">网络错误，未能提交反馈！</string>
    <string name="feedback_submitting">提交中，请稍后！</string>
    <string name="login_title">用户登录</string>
    <string name="login_remember_pwd">记住密码</string>
    <string name="login_auto_login">自动登录</string>
    <string name="login_check_user_id_null">用户ID不能为空</string>
    <string name="login_check_effective_user_id">请填写有效的用户ID</string>
    <string name="login_check_user_pwd_null">用户密码不能为空</string>
    <string name="login_check_user_pwd_constraint">密码为6~20个字符</string>
    <string name="login_faild">登录失败！请检查网络是否可用！</string>
    <string name="login_find_password">忘记密码？</string>
    <string name="login_regist">注册</string>
    <string name="login_unamehint">手机号/用户名/邮箱</string>
    <string name="login_pwdhint">请输入密码</string>
    <string name="newpost_title">最新</string>
    <string name="newpost_no_new_art">已是最新数据！</string>
    <string name="newpost_search_count_info_1">搜索字段在本文出现</string>
    <string name="newpost_search_count_info_2">次</string>
    <string name="home_title">会员中心</string>
    <string name="buy_title">商店</string>
    <string name="message_title">私信</string>
    <string name="message_hint">说点什么吧…</string>
    <string name="message_delete">删除成功</string>
    <string name="message_send">发送成功</string>
    <string name="note_title">文章随笔</string>
    <string name="note_please_select_art">请选择要删除的随笔</string>
    <string name="regist_title">用户注册</string>
    <string name="regist_user_id_hint">3~15位英文、数字或汉字</string>
    <string name="regist_user_pwd_hint">6~20位英文、数字或者下划线</string>
    <string name="regist_user_repwd_hint">确认密码</string>
    <string name="regist_email_hint">输入常用的邮箱，用于找回密码</string>
    <string name="regist_check_username_1">用户名需要3~15字符之间</string>
    <string name="regist_check_username_2">字母、数字或者下划线</string>
    <string name="regist_check_userpwd_1">密码需要6~20字符</string>
    <string name="regist_check_userpwd_2">大小写字母、数字、符号</string>
    <string name="regist_check_reuserpwd">两次密码不匹配！</string>
    <string name="regist_check_email_1">用户email不能为空</string>
    <string name="regist_check_email_2">请填写有效的email</string>
    <string name="setting_user">账户设置</string>
    <string name="setting_base">功能设置</string>
    <string name="setting_language">语言设置</string>
    <string name="setting_play">播放设置</string>
    <string name="setting_earphone">耳机设置</string>
    <string name="setting_appearance">显示设置</string>
    <string name="setting_ui">显示设置</string>
    <string name="setting_others">其他</string>
    <string name="setting_base_auto_syncho">自动原文同步</string>
    <string name="setting_base_highspeed_download">高速下载</string>
    <string name="setting_base_highspeed_download_tips">VIP才可开启此功能,请您登陆或购买VIP后方可使用</string>
    <string name="setting_base_screen_lit">播放时保持屏幕常亮</string>
    <string name="setting_base_login">用户登录</string>
    <string name="setting_base_loginout">注销登录</string>
    <string name="setting_base_interface">主题</string>
    <string name="setting_base_personalhome">个人空间</string>
    <string name="setting_base_letter">消息中心</string>
    <string name="data_text">数据</string>
    <string name="setting_clear_pic">清理图片缓存</string>
    <string name="setting_clear_video">清理音频缓存</string>
    <string name="setting_app">热门应用</string>
    <string name="setting_app_voa1">voa常速英语</string>
    <string name="setting_app_voa2">voa英语视频</string>
    <string name="setting_app_bbc">bbc六分钟英语</string>
    <string name="setting_app_cet4">英语四级听力</string>
    <string name="setting_app_music">听歌学英语</string>
    <string name="setting_night_mod">夜间模式</string>
    <string name="setting_sleep_mod">睡眠模式</string>
    <string name="setting_file_path">选择存储路径</string>
    <string name="submit">提交</string>
    <string name="person_award_content">Vip用户享受10倍于普通用户带宽的下载专线</string>
    <string name="uploadimage">上传头像</string>
    <string name="uploadimage_current">当前头像</string>
    <string name="uploadimage_text">上传一张靓照吧  展现自己个性</string>
    <string name="uploadimage_comlete">完成</string>
    <string name="uploadimage_bycamera">相机拍摄</string>
    <string name="uploadimage_bylocal">选择本地图片</string>
    <string name="uploadimage_skip">跳过</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="setting_look_ad">广告也放松</string>
    <string name="setting_look_ad_explain">学的有些累了？或是给爱语吧的小进步一些小鼓励？那就来看看我们准备的精彩广告吧~</string>
    <string name="person_info_title">编辑个人资料</string>
    <string name="person_info_gender">性别</string>
    <string name="person_info_birth">出生日期</string>
    <string name="person_info_save">保存</string>
    <string name="person_info_uploadPic">上传头像</string>
    <string name="person_info_local_now">所在地</string>
    <string name="person_info_school">大学</string>
    <string name="person_info_zodiac">生肖</string>
    <string name="person_info_constellation">星座</string>
</resources>