<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/backlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@color/camstorygreen" >

        <Button
            android:id="@+id/button_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/back_button" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/person_info_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/editinfo_save_btn"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_gravity="center"
            android:layout_marginRight="8dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/camstory_button_bg_selector"
            android:text="@string/person_info_save"
            android:textColor="#ffffff"
            android:textSize="16sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:background="#f8f8f8"
        android:orientation="vertical"
        android:padding="15dp" >

        <LinearLayout
            android:id="@+id/editPortrait"
            android:layout_width="fill_parent"
            android:layout_height="80dp"
            android:background="@drawable/shape_setting_panel_background" >

            <ImageView
                android:id="@+id/iveditPortrait"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="30dp" />

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/person_info_uploadPic"
                android:textColor="@color/camstorygreen" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_setting_panel_background"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="50dip"
                    android:gravity="center_vertical"
                    android:paddingLeft="20dip"
                    android:text="@string/person_info_gender"
                    android:textColor="@color/camstorygreen" />

                <TextView
                    android:id="@+id/editGender"
                    android:layout_width="0dip"
                    android:layout_height="50dip"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text=""
                    android:textColor="@color/camstorygreen" />
            </LinearLayout>

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#dcdcdc" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="50dip"
                    android:gravity="center_vertical"
                    android:paddingLeft="20dip"
                    android:text="@string/person_info_birth"
                    android:textColor="@color/camstorygreen" />

                <TextView
                    android:id="@+id/editBirthday"
                    android:layout_width="0dip"
                    android:layout_height="50dip"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text=""
                    android:textColor="@color/camstorygreen" />
            </LinearLayout>

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#dcdcdc" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="50dip"
                    android:gravity="center_vertical"
                    android:paddingLeft="20dip"
                    android:text="@string/person_info_local_now"
                    android:textColor="@color/camstorygreen" />

                <TextView
                    android:id="@+id/editResideLocation"
                    android:layout_width="0dip"
                    android:layout_height="50dip"
                    android:layout_weight="1"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:text=""
                    android:textColor="@color/camstorygreen"
                    android:textSize="14sp" />
            </LinearLayout>

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#dcdcdc" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="50dip"
                    android:gravity="center_vertical"
                    android:paddingLeft="20dip"
                    android:text="@string/person_info_school"
                    android:textColor="@color/camstorygreen" />

                <TextView
                    android:id="@+id/editSchool"
                    android:layout_width="0dip"
                    android:layout_height="50dip"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text=""
                    android:textColor="@color/camstorygreen" />
            </LinearLayout>

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#dcdcdc" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="50dip"
                    android:gravity="center_vertical"
                    android:paddingLeft="20dip"
                    android:text="@string/person_info_zodiac"
                    android:textColor="@color/camstorygreen" />

                <TextView
                    android:id="@+id/editZodiac"
                    android:layout_width="0dip"
                    android:layout_height="50dip"
                    android:layout_weight="1"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:text=""
                    android:textColor="@color/camstorygreen" />
            </LinearLayout>

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#dcdcdc" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="50dip"
                    android:gravity="center_vertical"
                    android:paddingLeft="20dip"
                    android:text="@string/person_info_constellation"
                    android:textColor="@color/camstorygreen" />

                <TextView
                    android:id="@+id/editConstellation"
                    android:layout_width="0dip"
                    android:layout_height="50dip"
                    android:layout_weight="1"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:text=""
                    android:textColor="@color/camstorygreen" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>